fix about on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -490,4 +490,20 @@ footer p a:hover {
     padding: 0 5% 0 5%;
   }
 
+  .about_container {
+    display: block;
+  }
+  
+  .image_container {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+  }
+
+  .information_container {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
 }
